Fix navbar css on mobile

--- a/src/components/Header/Navbar.module.scss
+++ b/src/components/Header/Navbar.module.scss
@@ -6,6 +6,10 @@
 
   display: flex;
   align-items: center;
+
+  @include smartphone {
+    background-color: $white;
+  }
 }
 
 $duration: 0.2s;
